feat: insert user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:51521:free/mv
-spring.datasource.username=SYS
-spring.datasource.password=SUA_SENHA
-spring.jooq.sql-dialect=ORACLE
-spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=sys as sysdba
+spring.datasource.password=123
+spring.jooq.sql-dialect=oracle
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
